@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-2032] Fixed topic varchar length issue with UTF-8 installs
 - [#MODX-1612] Added Create Menu context menu on root node for menus tree
 - [#MODX-2020] Ensure error when creating duplicate context ACLs shows
 - Tweaks to Package Management browser JS to allow for more consistent rendering
